#8 no more jumping, parent div with fixed position, child with resizable and draggable, stil weird resize feel

--- a/css/tabs.css
+++ b/css/tabs.css
@@ -35,17 +35,16 @@
 }
 
 #contentArea {
-    cursor: move;
     position: fixed;
-    width: 40%;
-    height: 60%;
+    width: 30%;
+    height: 40%;
     bottom: 20px;
     right: 0px;
     z-index: 99999;
-    background-color: white;
 }
 
 #jQueryTabsHeader {
+    cursor: move;
     width: 99%;
     height: 99%;
     z-index: 9999;
